--- a/ver.html
+++ b/ver.html
@@ -47,9 +47,10 @@
         <li><b>Color</b>: <output id="color"></output></li>
     </ul>
 
+    <hr>
     <div id="links">
         <a class="cursor-pointer" onclick="location.href='editar.html?id='+getId()">Editar</a>
-        - <a class="cursor-pointer" onclick="location.href='borrar.html?id='+getId()">Borrar</a>
+        <a class="cursor-pointer" onclick="location.href='borrar.html?id='+getId()">Borrar</a>
     </div>
 </body>
 
