--- a/editar.html
+++ b/editar.html
@@ -3,17 +3,102 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Eliminar moto</title>
+    <title>Modificar moto</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/script.js"></script>
     <script>
+        $(document).ready(function () {
+            matricula.disabled = !matriculada.checked;
 
+            $('#matriculada').change(function () {
+                matricula.disabled = !matriculada.checked;
+            });
+
+            var url = urlBase + '/moto/' + getId();
+
+            $.get(url).done(function (json) {
+                actualizar['id'].value = getId();
+                actualizar['marca'].value = json.results[0].marca;
+                actualizar['modelo'].value = json.results[0].modelo;
+                actualizar['kms'].value = json.results[0].kms;
+                actualizar['precio'].value = json.results[0].precio;
+                actualizar['matriculada'].value = json.results[0].matriculada ? true : false;
+                actualizar['matricula'].value = json.results[0].matricula;
+                actualizar['color'].value = json.results[0].color;
+                matricula.disabled = !matriculada.checked;
+            }).fail(function () {
+                $('#id').text('Error al recuperar la moto');
+            });
+
+            $('#modificar').click(function () {
+                var moto = {
+                    'marca': actualizar['marca'].value,
+                    'modelo': actualizar['modelo'].value,
+                    'kms': actualizar['kms'].value,
+                    'precio': actualizar['precio'].value,
+                    'matriculada': actualizar['matriculada'].checked ? 1 : 0,
+                    'matricula': actualizar['matricula'].value.toUpperCase(),
+                    'color': actualizar['color'].value.toUpperCase(),
+                };
+
+
+                $.ajax({
+                    url: urlBase + '/moto/' + getId(),
+                    type: 'PUT',
+                    contentType: 'application/json; charset=utf-8',
+                    dataType: 'json',
+                    data: JSON.stringify(moto),
+                    success: function (r) {
+                        if (r.status == 'OK') {
+                            salida.innerHTML = 'ACTUALIZADO ' + r.status;
+                        } else {
+                            salida.innerHTML = r.status + ' ' + r.message;
+                        }
+                    },
+                    error: function (r) {
+                        var texto = r.responseJSON.status + ' ' + r.responseJSON.message;
+                        texto += '<ul>';
+                        for (let i in r.responseJSON.errors)
+                            texto += '<li>' + i + ': ' + r.responseJSON.errors[i] + '</li>';
+                        texto += '</ul>';
+                        salida.innerHTML = texto;
+                    }
+                });
+            });
+        });
     </script>
 </head>
 
 <body>
+    <h1>Actualizar moto</h1>
+    <ul id="menu">
+        <li><a href="index.html">Lista de motos</a></li>
+        <li><a href="nuevo.html">Nueva moto</a></li>
+    </ul>
 
+    <h2>Formulario de actualización</h2>
+    <form id="actualizar">
+        <label>Marca</label><input type="text" name="marca"><br>
+        <label>Modelo</label><input type="text" name="modelo"><br>
+        <label>Kms</label><input type="text" name="kms"><br>
+        <label>Precio</label><input type="text" name="precio"><br>
+        <input id="matriculada" type="checkbox" name="matriculada" value="1">
+        <label>Matriculada</label><br>
+        <label>Matricula</label>
+        <input id="matricula" type="text" name="matricula"><br>
+        <label>Color</label><input type="color" name="color"><br>
+
+        <button type="button" id="modificar">Modificar</button>
+        <button type="reset">Reset</button>
+    </form>
+
+    <hr>
+    <div id="links">
+        <a class="cursor-pointer" onclick="location.href='ver.html?id='+getId()">Ir a detalles</a>
+        <a class="cursor-pointer" onclick="location.href='borrar.html?id='+getId()">Eliminar</a>
+    </div>
+    <output id="salida"></output>
 </body>
 
 </html>
