--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <button type="button" id="quitar">Quitar filtro</button>
 
     <h2>Listado</h2>
-    <output id="salida"></output>
+    <div id="salida"></div>
 </body>
 
 </html>
