--- a/ver.html
+++ b/ver.html
@@ -37,14 +37,14 @@
 
     <h2>Detalles de la moto</h2>
     <ul>
-        <li><b>ID</b>: <output id="id"></output></li>
-        <li><b>Marca</b>: <output id="marca"></output></li>
-        <li><b>Modelo</b>: <output id="modelo"></output></li>
-        <li><b>Kms</b>: <output id="kms"></output></li>
-        <li><b>Precio</b>: <output id="precio"></output></li>
-        <li><b>Matriculada</b>: <output id="matriculada"></output></li>
-        <li><b>Matricula</b>: <output id="matricula"></output></li>
-        <li><b>Color</b>: <output id="color"></output></li>
+        <li><b>ID</b>: <div id="id"></div></li>
+        <li><b>Marca</b>: <div id="marca"></div></li>
+        <li><b>Modelo</b>: <div id="modelo"></div></li>
+        <li><b>Kms</b>: <div id="kms"></div></li>
+        <li><b>Precio</b>: <div id="precio"></div></li>
+        <li><b>Matriculada</b>: <div id="matriculada"></div></li>
+        <li><b>Matricula</b>: <div id="matricula"></div></li>
+        <li><b>Color</b>: <div id="color"></div></li>
     </ul>
 
     <hr>
