--- a/borrar.html
+++ b/borrar.html
@@ -17,14 +17,19 @@
                     dataType: 'json',
                     success: function (r) {
                         salida.innerHTML = 'BORRADO ' + r.status;
-
-                        if (r.status == 'ERROR')
+                        
+                        if (r.status == 'ERROR') {
                             salida.innerHTML += r.message;
+                            salida.style.background = '#cc3c43';
+                        } else {
+                            salida.style.background = '#367952';
+                        }
 
                         setTimeout(function () { location.href = 'index.html'; }, 3000)
                     },
                     error: function (r) {
                         salida.innerHTML = 'No se pudo borrar: ' + r.status;
+                        salida.style.background = '#cc3c43';
                     }
                 });
             });
