--- a/nuevo.html
+++ b/nuevo.html
@@ -35,11 +35,13 @@
                     success: function (r) {
                         if (r.status == 'OK') {
                             salida.innerHTML = 'GUARDADO ' + r.status;
+                            salida.style.background = '#367952';
                             setTimeout(function () {
                                 location.href = 'index.html';
                             }, 2000);
                         } else {
                             salida.innerHTML = r.status + ' ' + r.message;
+                            salida.style.background = '#cc3c43';
                         }
                     },
                     error: function (r) {
@@ -49,6 +51,7 @@
                             texto += '<li>' + i + ': ' + r.responseJSON.errors[i] + '</li>';
                         texto += '</ul>';
                         salida.innerHTML = texto;
+                        salida.style.background = '#cc3c43';
                     }
                 });
             });
